# final_project_radaorellana_mauricio

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  project_mer2245.rst
project_mer2245/: project_mer2245.py
tests/: test_project_mer2245.py
