[tool.poetry]
name = "project_mer2245"
version = "0.1.0"
description = "Python package to download data from NYC Open Data in a easy and fast way."
authors = ["Mauricio <mro9395@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
