[tool.poetry]
name = "project_mer2245"
version = "0.1.0"
description = "Python package to download data from NYC Open Data in a easy and fast way."
authors = ["Mauricio <mro9395@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
bs4 = "^0.0.1"
requests = "^2.25.1"
numpy = "1.19.3"

[tool.poetry.dev-dependencies]
Sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
